# voyager-evolved

./: .abacus.donotdelete  .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  README.md  README_EVOLVED.md  install.bat  install.sh  push_to_github.sh  pyproject.toml  requirements.txt  run_quick_demo.sh  run_voyager.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
configs/: config.example.yaml
docs/: PERFORMANCE_TUNING.md
examples/: basic_usage.py  custom_goals.py  evolved_example.py  evolved_features.py
skill_library/: README.md
tests/: __init__.py  test_basic.py
voyager/: voyager.py
voyager/agents/: action.py  critic.py  curriculum.py  skill.py
voyager/cognition/: __init__.py  metacognition.py  parallel_processor.py
voyager/evolved/: __init__.py  cli.py  config.py  evolutionary_goals.py  human_behavior.py  observational_learning.py  performance.py  personality.py  player_observer.py  voyager_evolved.py
voyager/llm/: __init__.py  model_router.py  providers.py
voyager/memory/: __init__.py  config.py  consolidation.py  episodic_enhanced.py  experience.py  forgetting.py  semantic.py  semantic_enhanced.py  vector_store.py  working_memory.py
voyager/vision/: __init__.py  attention.py  capture.py  config.py  detector.py  embeddings.py  gpu_manager.py  integration.py  tracker.py
